Alignment fix -(h1)

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body{
 
 h1 {
   margin-top: 0;
+  position:absolute; /* for positioning the h1 tag independently from the gird*/
+  top: 40px; /* for positioning the h1 tag*/
+  left: 50%; /* for positioning the h1 tag*/
+  transform: translateX(-50%); /* for positioning the h1 tag*/
+
 }
 
 .grid-container {
@@ -19,6 +24,7 @@ h1 {
     border: 1px solid black;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
+    position: relative; /* for positioning the h1 tag independently from the gird*/
     
 }
   
